primer dia a incubio

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/tagmanagercontroller.js"></script>
+        <script src="scripts/controllers/tagmanager.js"></script>
         <!-- endbuild -->
 </body>
 </html>
