--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div id = "viewsContainer" class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -56,7 +56,6 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/tagmanagercontroller.js"></script>
         <script src="scripts/controllers/tagmanager.js"></script>
         <!-- endbuild -->
 </body>
