Primera plana amb tots els tests en verd

--- a/app/index.html
+++ b/app/index.html
@@ -53,10 +53,19 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- injectats manualment -->
+    <script src="bower_components/angularjs-country-select/angular.country-select.js"></script>
+    <!--
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/glossary/glossary.js"></script>
+    -->
+    <!-- end injectats manualment -->
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/tagmanager.js"></script>
+        <script src="scripts/filters/splitwords.js"></script>
         <!-- endbuild -->
 </body>
 </html>
