--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/tagmanager.js"></script>
         <script src="scripts/filters/splitwords.js"></script>
+        <script src="scripts/controllers/tabularresult.js"></script>
         <!-- endbuild -->
 </body>
 </html>
